--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "electron-training",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "electron main.js"
+  },  
   "repository": "git@github.com:Magdalena-Tarka/electron-training.git",
   "author": "Magdalena Tarka <mxtarka@gmail.com>",
   "license": "MIT",
